2008-06-19  Martin Leidig  <mleidig@schlund.de>

	Added postrender Interceptor hook - triggered after rendering
	from ContextXMLServlet.hookAfterRender(). Postrender interceptors
	have to implement the ContextInterceptor interface and are
	configured with a "postrender" tag. 
	
	* src/de/schlund/pfixxml/ContextXMLServlet.java: create and call
	postrender interceptors
	* src/de/schlund/pfixxml/config/ContextConfig.java: add method
	getPostRenderInterceptors()
	* src/de/schlund/pfixxml/config/impl/ContextXMLServletConfigImpl.java:
	added digester rules for postrender interceptors
	* src/de/schlund/pfixxml/config/impl/ContextInterceptorRule.java:
	added support for postrender trigger
	* src/de/schlund/pfixxml/config/impl/ContextConfigImpl.java: manage
	postrender interceptors
	* projects/core/schema/properties200401.xsd: add postrender definition	

2008-06-11  Martin Leidig  <mleidig@schlund.de>

	* projects/core/schema/properties200401.xsd: fixed config-include
	schema error

2008-06-10  Martin Leidig <mleidig@schlund.de>

	* src/de/schlund/pfixxml/IncludeDocumentExtension.java: fixed
	NullPointerException in get() method, which occurred when a
	part was defined multiple times and there's no target.

2008-06-02  schst  <schst@stubbles.net>

    Fixed bug #39: OXM should serialize getter methods for
    primitive boolean types starting with is*()
    * src/de/schlund/pfixcore/beans/BeanDescriptor.java
    * tests/junit/de/schlund/pfixcore/oxm/bean/BooleanPropertyBean.java
    * tests/junit/de/schlund/pfixcore/oxm/BooleanBeanTest.java

2008-05-29  Martin Leidig  <mleidig@schlund.de>

	Added pfx:authconstraint XSLT function to check if a given
	authconstraint is fulfilled:
	* src/de/schlund/pfixcore/util/TransformerCallback.java: added 
	checkAuthConstraint method, log warning for non-existing
	authconstraints
	* projects/core/xsl/functions.xsl: added pfx:authconstraint XSLT
	function

	* src/de/schlund/pfixcore/util/TransformerCallback.java: Log warning