@@ -1,3 +1,10 @@
+2008-08-05  Martin Leidig  <mleidig@schlund.de>
+
+	* src/de/schlund/pfixxml/DerefServlet.java: Limit validity time
+	of deref links by adding/signing a timestamp. The valid time can be 
+	configured using the 'derefserver.validtime' property (default value 
+	is 3600s).
+
 2008-06-19  Martin Leidig  <mleidig@schlund.de>
 
 	Added postrender Interceptor hook - triggered after rendering
